style_contact.css
@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@100;200;300;400;500;600;700&display=swap');

body {
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
    overflow-x: hidden;
    font-family: 'Roboto Mono', monospace, Arial, sans-serif;
    margin: 0;
}

input {
    border: 0;
    padding: 0.5rem;
    margin: 0;
    background: transparent;
    font: 'Roboto Mono', monospace, Arial, sans-serif;
}

input:focus {
    outline: none;
}

button {
    border: 0;
    padding: 0.5rem;
    margin: 0;
    background: transparent;
    font: 'Roboto Mono', monospace, Arial, sans-serif;
}

a {
    color: black;
    text-decoration: none;
}

::placeholder {
    color: black;
    opacity: 1;
}

.input {
    border-bottom: 0.1rem solid black;

    color: black;
    font-family: 'Roboto Mono', monospace, Arial, sans-serif;
    font-size: 1rem;
}

.title {
    padding-bottom: 1rem;
    display: flex;
    align-items: stretch;
}

.msg {
    font-size: 2rem;
}

.home {
    font-size: 1rem;
    opacity: 0.9;

    position: absolute;
    top: 1rem;
    right: 0;
}

.home:hover {
    border-bottom: 0.1rem solid black;
}

.working {
    position: fixed;
    transform: translate(-50%, 0);
    top: 45%;
    left: 50%;

    font-size: 1.5rem;
}

.working:hover {
    text-decoration: underline;
}

.contact {
    width: 50%;

    transform: translate(-50%, -50%);

    position: fixed;
    left: 50%;
    top: 47%;
}

.line_one {
    display: flex;
    align-items: stretch;
    padding-bottom: 1rem;
}

.line_two {
    display: flex;
    align-items: stretch;
    padding-bottom: 1rem;
    width: 100%;
}

.message {
    width: 100%;
}

.submit {
    border-bottom: 0.1rem solid black;
    float: right;

    margin: 0.2rem;
    padding: 0.1rem;

    font-family: 'Roboto Mono', monospace, Arial, sans-serif;
    color: black;
    font-size: 1rem;
    opacity: 1;
}

.submit:hover {
    padding-left: 0.2rem;
    border-left: 0.15rem solid black;
    border-right: 0.15rem solid black;
    border-top: 0.15rem solid black;
}

.home- {
    opacity: 0;
}

@media screen and (max-width: 1000px) {
    .contact {
        width: 75%;
    }
}

@media screen and (max-width: 751px) {
    .line_one {
        display: grid;
        width: 50%;

        grid-gap: 0.5rem;
        padding-bottom: 1.5rem;
    }

    .title {
        height: auto;
        float: right;
        width: 100%;
        grid-gap: 0.5rem;
    }

    .home {
        opacity: 0;
    }

    .line_one {
        padding-top: 1rem;
    }

    .home- {
        opacity: 1;
        width: 100%;

        position: relative;
        float: right;
        text-align: right;
    }
}

